--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,8 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>2.9.2</version>
 		</dependency>
+
+		<!-- Dependencia de testes do spring -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -74,6 +76,7 @@
 			<exclusions>
 				<exclusion>
 					<groupId>org.junit.vintage</groupId>
+					<!-- Exclui o JUnit 4, para incluir o 5 (jupiter) -->
 					<artifactId>junit-vintage-engine</artifactId>
 				</exclusion>
 			</exclusions>
